--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ before_install:
   CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
 - source /home/travis/google-cloud-sdk/path.bash.inc
 - gcloud version
+- tar -xzf credentials.tar.gz
 - mkdir -p lib
+- gcloud auth activate-service-account --key-file client-secret.json
 env:
 - DATASET_ID=jungleblog-173818
